cmake_minimum_required(VERSION 3.25)

project(OpenGL)

add_executable(${PROJECT_NAME} main.cpp)

add_subdirectory(external/glfw)

add_subdirectory(external/glad/cmake)

target_include_directories(${PROJECT_NAME} 
    PUBLIC external/glfw/include
)

target_link_directories(${PROJECT_NAME}
    PRIVATE enternal/glfw/src
)   

target_link_libraries(${PROJECT_NAME}
    glfw 
)